# FakeSMS

./: .gitignore  Makefile  entry.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
backend/: app.py  config.py  models.py  utils.py  wscm.py
frontend/: api.js  index.html  main.jsx  style.css  utils.js
frontend/components/: App.jsx  Home.jsx  Previews.jsx  Settings.jsx  Thread.jsx
