[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakesms-backend"
version = "1.0.0"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastapi",
    "tortoise-orm",
    "uvicorn[standard]",
    "httpx",
    "tomlkit",
    "appdirs",
    "black",
    "Pyinstaller"
]

[tool.black]
line-length = 120
target-version = ['py311']
